--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="assets/images/fav.png">
-    <title>Contact Us</title>
+    <title>İletişim</title>
 
     <!-- fontawesome css -->
     <link rel="stylesheet" href="assets/css/plugins/fontawesome-5.css">
@@ -36,8 +36,8 @@
                 <div class="col-12">
                     <div class="header-main-wrapper">
                         <div class="logo-area">
-                            <a href="index.html" class="logo">
-                                <img src="assets/images/logo/01.png" alt="image-logo">
+                            <a href="index.html" class="thumbnail">
+                                <img src="assets/images/logo/transparan-01.png" alt="logo-area">
                             </a>
                         </div>
                         <!-- header right start -->
@@ -397,7 +397,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="contactus.html" class="main">Contact Us</a>
+                        <a href="contactus.html" class="main">İletişim</a>
                     </li>
                 </ul>
             </nav>
@@ -439,10 +439,10 @@
                 <div class="col-lg-12">
                     <!-- bread crumb inner wrapper -->
                     <div class="breadcrumb-inner text-center">
-                        <h1 class="title">Contact Us</h1>
+                        <h1 class="title">İletişim</h1>
                         <div class="meta">
                             <a href="#" class="prev">Home /</a>
-                            <a href="#" class="next">Contact Us</a>
+                            <a href="#" class="next">İletişim</a>
                         </div>
                     </div>
                     <!-- bread crumb inner wrapper end -->
@@ -582,7 +582,7 @@
                                         <li><a href="project.html"><i class="fa-solid fa-arrow-right"></i> Our Projects</a></li>
                                         <li><a href="service.html"><i class="fa-solid fa-arrow-right"></i>Our Services</a></li>
                                         <li><a href="team.html"><i class="fa-solid fa-arrow-right"></i> Our Team</a></li>
-                                        <li><a href="contact.html"><i class="fa-solid fa-arrow-right"></i> Contact Us</a></li>
+                                        <li><a href="contact.html"><i class="fa-solid fa-arrow-right"></i> İletişim</a></li>
                                     </ul>
                                 </div>
                             </div>
