--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
                             <a href="index.html" class="thumbnail">
                                 <img src="assets/images/logo/transparan-02.png" alt="logo-area">
                             </a>
+                            <a href="index.html" class="thumbnail-2">
+                                <img src="assets/images/logo/transparan-01.png" alt="logo-area">
+                            </a>
                         </div>
                         <!-- header style two -->
                         <!-- nav area start -->
@@ -46,25 +49,24 @@
                                     <li class="has-droupdown pages">
                                         <a class="nav-link" href="#">Hakkımızda</a>
                                         <ul class="submenu inner-page">
-                                            <li><a class="mobile-menu-link" href="about.html">About</a></li>
-                                            <li><a class="mobile-menu-link" href="vision.html">Vision</a></li>
-                                            <li><a class="mobile-menu-link" href="careers.html">Careers</a></li>
-                                            <li><a class="mobile-menu-link" href="safety.html">Safety</a></li>
-                                            <li><a class="mobile-menu-link" href="sustainability.html">Sustainability</a></li>
+                                            <li><a class="mobile-menu-link" href="about.html">Hakkımızda</a></li>
+                                            <li><a class="mobile-menu-link" href="vision.html">Vizyonumuz</a></li>
+                                            <li><a class="mobile-menu-link" href="careers.html">Kampanyalar</a></li>
+                                            <li><a class="mobile-menu-link" href="sustainability.html">Çalıştığımız Firmalar</a></li>
                                         </ul>
                                     </li>
                                     <li class="has-droupdown pages">
                                         <a class="nav-link" href="#">Ürünlerimiz</a>
                                         <ul class="submenu inner-page">
-                                            <li><a class="mobile-menu-link" href="about.html">About</a></li>
-                                            <li><a class="mobile-menu-link" href="vision.html">Vision</a></li>
-                                            <li><a class="mobile-menu-link" href="careers.html">Careers</a></li>
-                                            <li><a class="mobile-menu-link" href="safety.html">Safety</a></li>
-                                            <li><a class="mobile-menu-link" href="sustainability.html">Sustainability</a></li>
+                                            <li><a class="mobile-menu-link" href="">Ürün</a></li>
+                                            <li><a class="mobile-menu-link" href="">Ürün</a></li>
+                                            <li><a class="mobile-menu-link" href="">Ürün</a></li>
+                                            <li><a class="mobile-menu-link" href="">Ürün</a></li>
+                                            <li><a class="mobile-menu-link" href="">Ürün</a></li>
                                         </ul>
                                     </li>
                                     <li class="menu-item">
-                                        <a class="nav-item" href="contact.html">İletişim</a>
+                                        <a class="nav-item" href="contact-2.html">İletişim</a>
                                     </li>
                                 </ul>
                             </nav>
@@ -72,7 +74,7 @@
                         <!-- nav-area end -->
                         <!-- header style two End -->
                         <div class="rts-button-area">
-                            <a href="contact.html" class="rts-btn btn-seconday">Mesaj Gönderin</a>
+                            <a href="contact-2.html" class="rts-btn btn-seconday">Mesaj Gönderin</a>
                             <div class="menu-area" id="menu-btn">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="18" height="16" viewBox="0 0 18 16" fill="none">
                                     <rect width="18" height="2" fill="#0C0A0A" />
@@ -102,7 +104,7 @@
                 </p>
                 <div class="footer">
                     <h4 class="title">Got a project in mind?</h4>
-                    <a href="contact.html" class="rts-btn btn-seconday">Let's talk</a>
+                    <a href="contact-2.html" class="rts-btn btn-seconday">Let's talk</a>
                 </div>
             </div>
         </div>
@@ -1160,7 +1162,7 @@
                         </h3>
                         <div class="button-group-footer" data-sal="slide-up" data-sal-delay="350" data-sal-duration="800">
                             <a href="#" class="rts-btn btn-primary">Get started</a>
-                            <a href="contact.html" class="rts-btn btn-seconday">Contact Us</a>
+                            <a href="contact-2.html" class="rts-btn btn-seconday">Contact Us</a>
                         </div>
                     </div>
                 </div>
@@ -1216,7 +1218,7 @@
                                     <a href="shop.html">Shop</a>
                                 </li>
                                 <li>
-                                    <a href="contact.html">Contact</a>
+                                    <a href="contact-2.html">Contact</a>
                                 </li>
                             </ul>
                         </div>
