--- a/contact-2.html
+++ b/contact-2.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="assets/images/fav.png">
-    <title>Contact Us</title>
+    <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.ico">
+    <title>İLETİŞİM</title>
 
     <!-- fontawesome css -->
     <link rel="stylesheet" href="assets/css/plugins/fontawesome-5.css">
@@ -25,10 +25,6 @@
 </head>
 
 <body>
-    <!-- header style two -->
-
-
-
     <!-- header area start -->
         <!-- rts header three start -->
         <header class="header-three header-seven">
@@ -50,16 +46,16 @@
                                 <nav>
                                     <ul>
                                         <li class="has-droupdown pages">
-                                            <a class="nav-link" href="#">Ürünlerimiz</a>
+                                            <a class="nav-link" href="#">ÜRÜNLERİMİZ</a>
                                             <ul class="submenu inner-page">
-                                                <li><a class="mobile-menu-link" href="">YERLİ KONTRPLAK</a></li>
-                                                <li><a class="mobile-menu-link" href="">UPM</a></li>
-                                                <li><a class="mobile-menu-link" href="">FANPROM</a></li>
-                                                <li><a class="mobile-menu-link" href="">SVEZA</a></li>
+                                                <li><a class="mobile-menu-link" href="yerli_kontrplak.html">YERLİ KONTRPLAK</a></li>
+                                                <li><a class="mobile-menu-link" href="upm.html">UPM</a></li>
+                                                <li><a class="mobile-menu-link" href="fanprom.html">FANPROM</a></li>
+                                                <li><a class="mobile-menu-link" href="sveza.html">SVEZA</a></li>
                                                 </ul>
                                                 </li>
                                                 <li class="menu-item">
-                                            <a class="nav-item" href="contact-2.html">İletişim</a>
+                                            <a class="nav-item" href="contact-2.html">İLETİŞİM</a>
                                             </li>
                                             </ul>
                                             </nav>
@@ -108,44 +104,19 @@
                 <ul class="mainmenu" id="mobile-menu-active">
                     
                     <li class="has-droupdown">
-                        <a href="#" class="main">Ürünlerimiz</a>
+                        <a href="#" class="main">ÜRÜNLERİMİZ</a>
                         <ul class="submenu">
-                            <li><a class="mobile-menu-link" href="project.html">YERLİ KONTRPLAK</a></li>
-                            <li><a class="mobile-menu-link" href="project.html">UPM</a></li>
-                            <li><a class="mobile-menu-link" href="project.html">FANPROM</a></li>
-                            <li><a class="mobile-menu-link" href="project.html">SVEZA</a></li>
+                            <li><a class="mobile-menu-link" href="yerli_kontrplak.html">YERLİ KONTRPLAK</a></li>
+                            <li><a class="mobile-menu-link" href="upm.html">UPM</a></li>
+                            <li><a class="mobile-menu-link" href="fanprom.html">FANPROM</a></li>
+                            <li><a class="mobile-menu-link" href="sveza.html">SVEZA</a></li>
                         </ul>
                     </li>
                     <li>
-                        <a href="contact-2.html" class="main">İletişim</a>
+                        <a href="contact-2.html" class="main">İLETİŞİM</a>
                     </li>
                 </ul>
             </nav>
-
-            <div class="social-wrapper-one">
-                <ul>
-                    <li>
-                        <a href="#">
-                            <i class="fa-brands fa-facebook-f"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <i class="fa-brands fa-twitter"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <i class="fa-brands fa-youtube"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <i class="fa-brands fa-linkedin-in"></i>
-                        </a>
-                    </li>
-                </ul>
-            </div>
         </div>
         <!-- mobile menu area end -->
     </div>
@@ -186,8 +157,11 @@
                             </div>
                             <div class="info">
                                 <span>BİZİ Arayın 24/7</span>
-                                <a href="tel:+18475555555">
-                                    <h5>+584 (25) 21453</h5>
+                                <a href="tel:+905413590679">
+                                    <h5>+90 541 359 0679</h5>
+                                </a>
+                                <a href="tel:+905323590679">
+                                    <h5>+90 532 359 0679</h5>
                                 </a>
                             </div>
                         </div>
@@ -202,9 +176,9 @@
                                 <img src="assets/images/shape/01.svg" alt="">
                             </div>
                             <div class="info">
-                                <span>MAke A Quote</span>
-                                <a href="mailto:someone@example.com">
-                                    <h5>info@finbiz.com</h5>
+                                <span>MAİL ADRESİMİZ</span>
+                                <a href="mailto:info@nevzateksi.com.tr">
+                                    <h5>info@nevzateksi.com.tr</h5>
                                 </a>
                             </div>
                         </div>
@@ -219,9 +193,9 @@
                                 <img src="assets/images/shape/03.svg" alt="">
                             </div>
                             <div class="info">
-                                <span>Service Station</span>
-                                <a href="#">
-                                    <h5>25 Hilton Street.</h5>
+                                <span>ADRES</span>
+                                <a href="https://maps.app.goo.gl/MSrQjaYx4puLVbKJ6">
+                                    <h5>NEK TOWER<br>MAMAK/ANKARA</h5>
                                 </a>
                             </div>
                         </div>
@@ -237,45 +211,48 @@
     <div class="rts-contact-page-form-area contact-2 rts-section-gapBottom">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d14602.288851207937!2d90.47855065!3d23.798243149999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sbd!4v1663151706353!5m2!1sen!2sbd" width="600" height="640" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+                <div class="">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3058.4749670264805!2d32.9018796!3d39.9531323!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14d3530e6aa4f11d%3A0x310cff17a77b61f6!2sNek%20Tower!5e0!3m2!1str!2str!4v1695993276748!5m2!1str!2str"
+                        width="600" height="640" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade">
                     </iframe>
                 </div>
-                <div class="col-lg-6">
+                <!-- <div class="col-lg-6">
                     <div class="mian-wrapper-form">
                         <div class="title-mid-wrapper-home-two" data-sal="slide-up" data-sal-delay="150" data-sal-duration="800">
-                            <span class="pre">Get In Touch</span>
-                            <h2 class="title">Let’s Get in Touch</h2>
+                            <h2 class="title">FİYAT TEKLİFİ AL</h2>
                         </div>
-                        <form id="contact" action="#" class="appoinment-form mt--40">
+                        <form id="contact" action="process_form.php" class="appoinment-form mt--40">
                             <div class="input-half-wrapper">
                                 <div class="single-input">
-                                    <input type="text" placeholder="Your Name" required>
+                                    <input type="text" name="name" placeholder="İsim Soyisim" required>
                                 </div>
                                 <div class="single-input">
-                                    <input type="email" placeholder="Email Address" required>
+                                    <input type="email" name="email" placeholder="Email" required>
                                 </div>
                             </div>
-                            <select>
-                                <option data-display="Select">Select an option</option>
-                                <option value="1">Some option</option>
-                                <option value="2">Another option</option>
-                                <option value="3" disabled>A disabled option</option>
-                                <option value="4">Potato</option>
+                            <select name="urun" required>
+                                <option value="">Ürün Seçiniz...</option>
+                                <option value="yerli">Yerli Kontrplak</option>
+                                <option value="upm">UPM</option>
+                                <option value="fanprom">Fanprom</option>
+                                <option value="sveza">Sveza</option>
+                                <option value="other">Diğer</option>
                             </select>
                             <div class="input-half-wrapper mt--25 mb--30">
                                 <div class="single-input">
-                                    <input placeholder="Select Date" type="text" name="checkIn" id="datepicker" value="" class="calendar" required>
+                                    <input type="text" name="kalinlik" placeholder="Kalınlık" required>
                                 </div>
                                 <div class="single-input">
-                                    <input type="text" id="timepicker" placeholder="Select Date" />
+                                    <input type="text" name="olcu" placeholder="Ölçü" required>
                                 </div>
                             </div>
-                            <textarea class="form-control mb--30" id="message" name="message" placeholder="Your message Here" required=""></textarea>
-                            <button type="submit" class="rts-btn btn-primary">SUBMIT MESSAGE</button>
+                            <textarea class="form-control mb--30" id="message" name="message" placeholder="Eklemek İstedikleriniz..."></textarea>
+                            <button type="submit" class="rts-btn btn-primary">Gönder</button>
                         </form>
                     </div>
-                </div>
+                </div>-->
             </div>
         </div>
     </div>
@@ -288,83 +265,51 @@
                 <div class="col-lg-6 col-md-12">
                     <div class="left-footer-wrapper-3 pt--120 pb--80">
                         <h3 class="title" data-sal="slide-up" data-sal-delay="150" data-sal-duration="800">
-                            Let's Build Something <br>
-                            Great Together!
+                            <img src="assets/images/logo/transparan-02.png" alt="logo-area">
                         </h3>
                         <div class="button-group-footer" data-sal="slide-up" data-sal-delay="350" data-sal-duration="800">
-                            <a href="#" class="rts-btn btn-primary">Get started</a>
-                            <a href="contact-2.html" class="rts-btn btn-seconday">Contact Us</a>
-                        </div>
-                    </div>
+                            <a href="contact-2.html" class="rts-btn btn-seconday">BİZE ULAŞIN</a>
+                            <div class="rts-social-wrapper-three">
+                                <ul>
+                                    <li data-sal="slide-up" data-sal-delay="100" data-sal-duration="800"><a
+                                            href="https://www.instagram.com/nevzateksi_ormanurunleri/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                                    </li>
+                                </ul>
+                            </div>
+                            </div>
+                            </div>
                 </div>
                 <div class="col-lg-6 col-md-12">
                     <div class="right-footer-wrapper-3 pt--120 pb--80 pl--120 pr--120 pl_md--0 pt_md--30 pl_sm--0 pt_sm--30">
                         <div class="single-information">
                             <h5 class="title" data-sal="slide-up" data-sal-delay="150" data-sal-duration="800">
-                                Address
+                                ADRES
                             </h5>
-                            <a href="#" class="address" data-sal="slide-up" data-sal-delay="350" data-sal-duration="800"
-                                style="display: block;">
-                                Kingstone --- <br>
-                                258 denial street office <br>
-                                Berlin Germany
+                            <a href="https://maps.app.goo.gl/MSrQjaYx4puLVbKJ6" class="address" data-sal="slide-up" data-sal-delay="350"
+                                data-sal-duration="800" style="display: block;">
+                                Diriliş mahallesi
+                                Destegül Sokak
+                                No:13/28
+                                Nek Tower
+                                Mamak/Ankara-Türkiye
                             </a>
-                            <div class="rts-social-wrapper-three">
-                                <ul>
-                                    <li data-sal="slide-up" data-sal-delay="100" data-sal-duration="800"><a href="#"><i
-                                                class="fa-brands fa-facebook-f"></i></a></li>
-                                    <li data-sal="slide-up" data-sal-delay="200" data-sal-duration="800"><a href="#"><i
-                                                class="fa-brands fa-twitter"></i></a></li>
-                                    <li data-sal="slide-up" data-sal-delay="300" data-sal-duration="800"><a href="#"><i
-                                                class="fa-brands fa-youtube"></i></a></li>
-                                    <li data-sal="slide-up" data-sal-delay="400" data-sal-duration="800"><a href="#"><i
-                                                class="fa-brands fa-linkedin-in"></i></a></li>
-                                    </ul>
-                                    </div>
-                                    </div>
+                        </div>
                         <div class="single-information">
                             <h5 class="title" data-sal="slide-up" data-sal-delay="150" data-sal-duration="800">
-                                Say Hello
+                                İLETİŞİM
                             </h5>
-                            <a href="mailto:name@email.com" class="mail" data-sal="slide-up" data-sal-delay="350" data-sal-duration="800"
+                            <a href="mailto:info@nevzateksi.com.tr" class="mail" data-sal="slide-up" data-sal-delay="350" data-sal-duration="800"
                                 style="display: block;">
-                                hello@design.com
+                                info@nevzateksi.com.tr
                             </a>
-                            <a href="tel:+18475555555" class="number" data-sal="slide-up" data-sal-delay="550" data-sal-duration="800"
+                            <a href="tel:+90 541 359 0679" class="number" data-sal="slide-up" data-sal-delay="550" data-sal-duration="800"
                                 style="display: block;">
-                                +258 368 3158
-                            </a>
-                        </div>
-                        </div>
-                        </div>
-                        </div>
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="copyright-area-three">
-                        <div class="menu-area-copyright">
-                            <ul>
-                                <li>
-                                    <a href="index.html">Home</a>
-                                </li>
-                                <li>
-                                    <a href="project.html">Project</a>
-                                </li>
-                                <li>
-                                    <a href="blog.html">Blog</a>
-                                </li>
-                                <li>
-                                    <a href="shop.html">Shop</a>
-                                </li>
-                                <li>
-                                    <a href="contact-2.html">Contact</a>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="condition">
-                            <ul>
-                                <li><a href="#">Terms and Conditions</a></li>
-                                <li><a href="#">Privacy Policy</a></li>
-                            </ul>
+                                +90 541 359 0679
+                                </a>
+                                <a href="tel:+90 541 359 0679" class="number" data-sal="slide-up" data-sal-delay="550" data-sal-duration="800"
+                                    style="display: block;">
+                                    +90 532 359 0679
+                                </a>
                         </div>
                     </div>
                 </div>
