--- a/sveza.html
+++ b/sveza.html
@@ -252,9 +252,13 @@
                             <a href="contact-2.html" class="rts-btn btn-seconday">BİZE ULAŞIN</a>
                             <div class="rts-social-wrapper-three">
                                 <ul>
-                                    <li data-sal="slide-up" data-sal-delay="100" data-sal-duration="800"><a
+                                                                        <li data-sal="slide-up" data-sal-delay="100" data-sal-duration="800"><a
                                             href="https://www.instagram.com/nevzateksi_ormanurunleri/" target="_blank"><i
                                                 class="fa-brands fa-instagram"></i></a>
+                                    </li>
+                                    <li data-sal="slide-up" data-sal-delay="100" data-sal-duration="800"><a
+                                            href="https://www.linkedin.com/company/nevzat-ek%C5%9Fi%CC%87-orman-%C3%BCr%C3%BCnleri%CC%87" target="_blank"><i
+                                                class="fa-brands fa-linkedin"></i></a>
                                     </li>
                                 </ul>
                             </div>
