--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.ico">
-    <title>Nevzat Ekşi</title>
+    <title>Nevzat Ekşi Orman Ürünleri</title>
 
     <!-- fontawesome css -->
     <link rel="stylesheet" href="assets/css/plugins/fontawesome-5.css">
@@ -193,7 +193,7 @@
                                 <div class="row align-items-center">
                                     <div class="col-lg-6 first-child">
                                         <span class="pre-title">Nevzat Ekşi</span>
-                                        <h3 class="title-main">Kontrplak Nedir?</h3>
+                                        <h2 class="title-main">Kontrplak Nedir?</h2>
                                         <div class="accordion-three" id="accordionExample">
                                             <p class="disc">
                                                 <li> Kontrplak, ince ahşap tabakalarının özel bir yapıştırıcı ile bir araya getirilerek oluşturulan bir
@@ -253,11 +253,11 @@
                                     <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
                                         data-bs-parent="#accordionExample">
                                         <div class="accordion-body">
-                                            <p class="disc"><b>B</b> Sadece birkaç küçük düğüm veya renk değişikliği olan her iki yan kaplama. <br>
+                                            <p class="disc"><br><b>B</b> Sadece birkaç küçük düğüm veya renk değişikliği olan her iki yan kaplama. <br><br>
                                                 <b>B/BB</b> Sadece birkaç küçük budak veya renk değişikliği olan yüz kaplamaları. Eklemli kaplamalara, büyük
                                                 budaklara,
-                                                tıkaçlara vb. izin veren ters taraf.<br>
-                                                <b>BB</b> Eklemli kaplamalara, büyük budaklara, tıkaçlara vb. izin veren her iki taraf.<br>
+                                                tıkaçlara vb. izin veren ters taraf.<br><br>
+                                                <b>BB</b> Eklemli kaplamalara, büyük budaklara, tıkaçlara vb. izin veren her iki taraf.<br><br>
                                                 <b>C/D</b> Yapısal kontrplak için bu sınıf, yüzün budak ve kusurlarla dolu olduğu ve arka yüzün doldurulmamış bazı
                                                 kusurlara sahip olabileceği anlamına gelir. Her iki yüz de bir görünüm sınıfı değildir ve pürüzsüz zımparalanmazlar.
                                                 Bu kalite genellikle döşeme, dış cephe kaplaması, duvarcılık veya çatı kaplama malzemeleri gibi başka bir ürünle
@@ -310,7 +310,7 @@
                         </a>
                         <div class="col-lg-6 content-area">
                             <a href="yerli_kontrplak.html">
-                                <h5 class="title">YERLİ KONTRPLAK</h5>
+                                <h2 class="title">YERLİ KONTRPLAK</h2>
                             </a>
                             <p class="disc">Türkiye, dünya genelinde önemli bir kontrplak üreticisi ve ihracatçısıdır.</p>
                             <a href="yerli_kontrplak.html" class="read-more-btn">Daha Fazla <i class="fa-regular fa-arrow-right"></i></a>
@@ -326,7 +326,7 @@
                         </a>
                         <div class="col-lg-6 content-area">
                             <a href="upm.html">
-                                <h5 class="title">UPM</h5>
+                                <h2 class="title">UPM</h2>
                             </a>
                             <p class="disc">UPM-Kymmene Oyj Finlandiyalı bir orman endüstrisi şirketidir. </p>
                             <a href="upm.html" class="read-more-btn">Daha Fazla <i class="fa-regular fa-arrow-right"></i></a>
@@ -342,7 +342,7 @@
                         </a>
                         <div class="col-lg-6 content-area">
                             <a href="fanprom.html">
-                                <h5 class="title">FANPROM</h5>
+                                <h2 class="title">FANPROM</h2>
                             </a>
                             <p class="disc">STARWOOD NN, Nizhny Novgorod bölgesindeki kereste endüstrisi işletmelerinin
                                 distribütörüdür. </p>
@@ -359,7 +359,7 @@
                         </a>
                         <div class="col-lg-6 content-area">
                             <a href="sveza.html">
-                                <h5 class="title">SVEZA</h5>
+                                <h2 class="title">SVEZA</h2>
                             </a>
                             <p class="disc">SVEZA grubu, huş kontrplak üretiminde dünya lideri olan bir Rus şirketidir. </p>
                             <a href="sveza.html" class="read-more-btn">Daha Fazla <i class="fa-regular fa-arrow-right"></i></a>
