--- a/404.html
+++ b/404.html
@@ -444,7 +444,7 @@
                 <div class="col-12">
                     <div class="wrapper-404 text-center">
                         <div class="thumbnail">
-                            <img src="assets/images/contact/04.png" alt="">
+                            <img src="assets/images/contact/04.png" alt="kontrplak">
                         </div>
                         <h2 class="title mt--40">
                             Oops! Nothing Was Found
