--- a/contact-2.html
+++ b/contact-2.html
@@ -34,10 +34,10 @@
                         <div class="header-three-wrapper">
                             <div class="logo-area">
                                 <a href="index.html" class="thumbnail">
-                                    <img src="assets/images/logo/transparan-01.png" alt="logo-area">
+                                    <img src="assets/images/logo/transparan-01.png" alt="Nevzat Ekşi">
                                 </a>
                                 <a href="index.html" class="thumbnail-2">
-                                    <img src="assets/images/logo/transparan-01.png" alt="logo-area">
+                                    <img src="assets/images/logo/transparan-01.png" alt="Nevzat Ekşi">
                                 </a>
                                 </div>
                             <!-- header style two -->
@@ -137,7 +137,7 @@
                     <div class="single-contact-one-inner">
                         <div class="content">
                             <div class="icone">
-                                <img src="assets/images/shape/02.svg" alt="">
+                                <img src="assets/images/shape/02.svg" alt="kontrplak">
                             </div>
                             <div class="info">
                                 <span>BİZİ Arayın 24/7</span>
@@ -157,7 +157,7 @@
                     <div class="single-contact-one-inner">
                         <div class="content">
                             <div class="icone">
-                                <img src="assets/images/shape/01.svg" alt="">
+                                <img src="assets/images/shape/01.svg" alt="kontrplak">
                             </div>
                             <div class="info">
                                 <span>MAİL ADRESİMİZ</span>
@@ -174,7 +174,7 @@
                     <div class="single-contact-one-inner">
                         <div class="content">
                             <div class="icone">
-                                <img src="assets/images/shape/03.svg" alt="">
+                                <img src="assets/images/shape/03.svg" alt="kontrplak">
                             </div>
                             <div class="info">
                                 <span>ADRES</span>
@@ -249,7 +249,7 @@
                 <div class="col-lg-6 col-md-12">
                     <div class="left-footer-wrapper-3 pt--120 pb--80">
                         <h3 class="title" data-sal="slide-up" data-sal-delay="150" data-sal-duration="800">
-                            <img src="assets/images/logo/transparan-02.png" alt="logo-area">
+                            <img src="assets/images/logo/transparan-02.png" alt="Nevzat Ekşi">
                         </h3>
                         <div class="button-group-footer" data-sal="slide-up" data-sal-delay="350" data-sal-duration="800">
                             <a href="contact-2.html" class="rts-btn btn-seconday">BİZE ULAŞIN</a>
