--- a/fanprom.html
+++ b/fanprom.html
@@ -36,10 +36,10 @@
                         <div class="header-three-wrapper">
                             <div class="logo-area">
                                 <a href="index.html" class="thumbnail">
-                                    <img src="assets/images/logo/transparan-01.png" alt="logo-area">
+                                    <img src="assets/images/logo/transparan-01.png" alt="Nevzat Ekşi">
                                 </a>
                                 <a href="index.html" class="thumbnail-2">
-                                    <img src="assets/images/logo/transparan-01.png" alt="logo-area">
+                                    <img src="assets/images/logo/transparan-01.png" alt="Nevzat Ekşi">
                                 </a>
                                 </div>
                             <!-- header style two -->
@@ -137,7 +137,7 @@
                 <div class="row">
                     <div class="col-lg-5">
                         <div class="thumbnail-area-about">
-                            <img src="assets/images/Fanprom/LOGO.png" alt="about-area">
+                            <img src="assets/images/Fanprom/LOGO.png" alt="FANPROM">
                         </div>
                     </div>
                     <div class="col-lg-7 about-a-p-cont">
@@ -177,7 +177,7 @@
                         <div class="col-lg-3 single-funfacts-about">
                             <div class="top">
                                 <div class="icon">
-                                    <img src="assets/images/Fanprom/BIRCH(2).jpg">
+                                    <img src="assets/images/Fanprom/BIRCH(2).jpg" alt="BIRCH Kontrplak">
                                 </div>
                                 <h2 class="title">BIRCH</h2>
                             </div>
@@ -199,7 +199,7 @@
                         <div class="col-lg-3 single-funfacts-about">
                             <div class="top">
                                 <div class="icon">
-                                    <img src="assets/images/Fanprom/FİLİMLİ(1).jpg" alt="fun-facts">
+                                    <img src="assets/images/Fanprom/FİLİMLİ(1).jpg" alt="Filmli Kontrplak">
                                 </div>
                                 <h2 class="title">FİLMLİ</h2>
                             </div>
@@ -221,7 +221,7 @@
                         <div class="col-lg-3 single-funfacts-about">
                             <div class="top">
                                 <div class="icon">
-                                    <img src="assets/images/Fanprom/WIERMESH(1).jpg" alt="fun-facts">
+                                    <img src="assets/images/Fanprom/WIERMESH(1).jpg" alt="WIREMESH Kontrplak">
                                 </div>
                                 <h2 class="title">WIREMESH</h2>
                             </div>
@@ -251,7 +251,7 @@
                 <div class="col-lg-6 col-md-12">
                     <div class="left-footer-wrapper-3 pt--120 pb--80">
                         <h3 class="title" data-sal="slide-up" data-sal-delay="150" data-sal-duration="800">
-                            <img src="assets/images/logo/transparan-02.png" alt="logo-area">
+                            <img src="assets/images/logo/transparan-02.png" alt="Nevzat Ekşi">
                             </h3>
                         <div class="button-group-footer" data-sal="slide-up" data-sal-delay="350" data-sal-duration="800">
                             <a href="contact-2.html" class="rts-btn btn-seconday">BİZE ULAŞIN</a>
