--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
                     <div class="header-three-wrapper">
                         <div class="logo-area">
                             <a href="index.html" class="thumbnail">
-                                <img src="assets/images/logo/transparan-02.png" alt="logo-area">
+                                <img src="assets/images/logo/transparan-02.png" alt="Nevzat Ekşi">
                             </a>
                             <a href="index.html" class="thumbnail-2">
-                                <img src="assets/images/logo/transparan-01.png" alt="logo-area">
+                                <img src="assets/images/logo/transparan-01.png" alt="Nevzat Ekşi">
                             </a>
                         </div>
                         <!-- header style two -->
@@ -122,7 +122,7 @@
             </div>
         </div>
         <div class="banner-image-area">
-            <img src="assets/images/giris_orman.png" alt="banner-image">
+            <img src="assets/images/giris_orman.png" alt="Orman Ürünleri">
         </div>
     </div>
     <!-- rts banner area end -->
@@ -134,7 +134,7 @@
                 <div class="col-lg-5">
                     <div class="about-image-thumbnail-3">
                         <img class="image-1" data-sal="slide-up" data-sal-delay="100" data-sal-duration="800"
-                            src="assets/images/logo/transparan-03.png" alt="about-image">
+                            src="assets/images/logo/transparan-03.png" alt="Nevzat Ekşi">
                     </div>
                 </div>
                 <div class="col-lg-7 pl--60 p-md-0">
@@ -159,7 +159,7 @@
                                             kararlıyız.</li>
                                         <li>Nevzat Ekşi tarafından 2023 yılında kurulan şirketimizin temelleri aslında 25 yıl önce atıldı.Kurucumuz uzun
                                             yıllardır sektörde çeşitli pozisyonlarda işini en iyi şekilde yapmayı amaç edinerek özverili çalışmaları sonucu NEVZAT
-                                            EKŞİ ismini bir marka yapmayı başarmıştır. Çoculuktan gelen bir tecrübenin sonucu kurulan şirketimiz alanında en
+                                            EKŞİ ismini bir marka yapmayı başarmıştır. Çocukluktan gelen bir tecrübenin sonucu kurulan şirketimiz alanında en
                                             kaliteli ürünleri en uygun fiyatla müşterilerine sunmayı hedef edinmiştir.</li>
                                         <li>Edinmiş olduğumuz tecrübe ve teknik bilgiler sonucu müşterilerimizin memnuniyetini en üst seviye çıkarmayı amaç
                                             edindik.Satış öncesi ürünler ve kullanım alanları ile ilgili doğru teknik bilgiyi vermek, müşterilerimizin amaçlarına
@@ -306,7 +306,7 @@
                     <!-- single service area start-->
                     <div class="rts-single-service-three" data-sal="slide-up" data-sal-delay="150" data-sal-duration="800">
                         <a href="yerli_kontrplak.html" class="thumbnail-area">
-                            <img src="assets/images/hd-turk-bayragi-png-2-768x512.png" alt="Service-area">
+                            <img src="assets/images/hd-turk-bayragi-png-2-768x512.png" alt="Yerli Kontrplak">
                         </a>
                         <div class="col-lg-6 content-area">
                             <a href="yerli_kontrplak.html">
@@ -322,7 +322,7 @@
                     <!-- single service area start-->
                     <div class="rts-single-service-three" data-sal="slide-up" data-sal-delay="350" data-sal-duration="800">
                         <a href="upm.html" class="thumbnail-area">
-                            <img src="assets/images/UPM(bitti)/industry-green-silhouette-tree-grass-removebg.png" alt="Service-area">
+                            <img src="assets/images/UPM(bitti)/industry-green-silhouette-tree-grass-removebg.png" alt="UPM">
                         </a>
                         <div class="col-lg-6 content-area">
                             <a href="upm.html">
@@ -338,7 +338,7 @@
                     <!-- single service area start-->
                     <div class="rts-single-service-three" data-sal="slide-up" data-sal-delay="550" data-sal-duration="800">
                         <a href="fanprom.html" class="thumbnail-area">
-                            <img src="assets/images/Fanprom/LOGO.png" alt="Service-area">
+                            <img src="assets/images/Fanprom/LOGO.png" alt="Fanprom">
                         </a>
                         <div class="col-lg-6 content-area">
                             <a href="fanprom.html">
@@ -355,7 +355,7 @@
                     <!-- single service area start-->
                     <div class="rts-single-service-three" data-sal="slide-up" data-sal-delay="150" data-sal-duration="800">
                         <a href="sveza.html" class="thumbnail-area">
-                            <img src="assets/images/SVEZA/sveza-logo-short.png" alt="Service-area">
+                            <img src="assets/images/SVEZA/sveza-logo-short.png" alt="Sveza">
                         </a>
                         <div class="col-lg-6 content-area">
                             <a href="sveza.html">
@@ -379,7 +379,7 @@
                 <div class="col-lg-6 col-md-12">
                     <div class="left-footer-wrapper-3 pt--120 pb--80">
                         <h3 class="title" data-sal="slide-up" data-sal-delay="150" data-sal-duration="800">
-                            <img src="assets/images/logo/transparan-02.png" alt="logo-area">
+                            <img src="assets/images/logo/transparan-02.png" alt="Nevzat Ekşi">
                         </h3>
                         <div class="button-group-footer" data-sal="slide-up" data-sal-delay="350" data-sal-duration="800">
                             <a href="contact-2.html" class="rts-btn btn-seconday">BİZE ULAŞIN</a>
