--- a/sveza.html
+++ b/sveza.html
@@ -35,10 +35,10 @@
                         <div class="header-three-wrapper">
                             <div class="logo-area">
                                 <a href="index.html" class="thumbnail">
-                                    <img src="assets/images/logo/transparan-01.png" alt="logo-area">
+                                    <img src="assets/images/logo/transparan-01.png" alt="Nevzat Ekşi">
                                 </a>
                                 <a href="index.html" class="thumbnail-2">
-                                    <img src="assets/images/logo/transparan-01.png" alt="logo-area">
+                                    <img src="assets/images/logo/transparan-01.png" alt="Nevzat Ekşi">
                                 </a>
                                 </div>
                             <!-- header style two -->
@@ -137,7 +137,7 @@
                     <div class="col-lg-5">
                         <div class="thumbnail-area-about">
                             <img src="assets/images/SVEZA/sveza-logo-short.png"
-                                alt="about-area">
+                                alt="sveza">
                         </div>
                     </div>
                     <div class="col-lg-7 about-a-p-cont">
@@ -175,7 +175,7 @@
                         <div class="col-lg-4 single-funfacts-about">
                             <div class="top">
                                 <div class="icon">
-                                    <img src="assets/images/SVEZA/sveza-color.png">
+                                    <img src="assets/images/SVEZA/sveza-color.png" alt="sveza color">
                                 </div>
                                 <h2 class="title">SVEZA-COLOR</h2>
                             </div>
@@ -196,7 +196,7 @@
                         <div class="col-lg-4 single-funfacts-about">
                             <div class="top">
                                 <div class="icon">
-                                    <img src="assets/images/SVEZA/SVEZA-UV.png" alt="fun-facts">
+                                    <img src="assets/images/SVEZA/SVEZA-UV.png" alt="sveza uv">
                                 </div>
                                 <h2 class="title">SVEZA-UV</h2>
                             </div>
@@ -229,7 +229,7 @@
                 <div class="col-lg-6 col-md-12">
                     <div class="left-footer-wrapper-3 pt--120 pb--80">
                         <h3 class="title" data-sal="slide-up" data-sal-delay="150" data-sal-duration="800">
-                            <img src="assets/images/logo/transparan-02.png" alt="logo-area">
+                            <img src="assets/images/logo/transparan-02.png" alt="Nevzat Ekşi">
                             </h3>
                         <div class="button-group-footer" data-sal="slide-up" data-sal-delay="350" data-sal-duration="800">
                             <a href="contact-2.html" class="rts-btn btn-seconday">BİZE ULAŞIN</a>
