--- a/upm.html
+++ b/upm.html
@@ -35,10 +35,10 @@
                         <div class="header-three-wrapper">
                             <div class="logo-area">
                                 <a href="index.html" class="thumbnail">
-                                    <img src="assets/images/logo/transparan-01.png" alt="logo-area">
+                                    <img src="assets/images/logo/transparan-01.png" alt="Nevzat Ekşi">
                                 </a>
                                 <a href="index.html" class="thumbnail-2">
-                                    <img src="assets/images/logo/transparan-01.png" alt="logo-area">
+                                    <img src="assets/images/logo/transparan-01.png" alt="Nevzat Ekşi">
                                 </a>
                                 </div>
                             <!-- header style two -->
@@ -136,7 +136,7 @@
                     <div class="col-lg-5">
                         <div class="thumbnail-area-about">
                             <img src="assets/images/UPM(bitti)/industry-green-silhouette-tree-grass-removebg.png"
-                                alt="about-area">
+                                alt="UPM">
                         </div>
                     </div>
                     <div class="col-lg-7 about-a-p-cont">
@@ -185,7 +185,7 @@
                         <div class="col-lg-3 single-funfacts-about">
                             <div class="top">
                                 <div class="icon">
-                                    <img src="assets/images/UPM(bitti)/WISA-Birch Premium Medium.jpeg">
+                                    <img src="assets/images/UPM(bitti)/WISA-Birch Premium Medium.jpeg" alt="WISA BIRCH">
                                 </div>
                                 <h2 class="title">WISA-BIRCH</h2>
                             </div>
@@ -228,7 +228,7 @@
                         <div class="col-lg-3 single-funfacts-about">
                             <div class="top">
                                 <div class="icon">
-                                    <img src="assets/images/UPM(bitti)/WISA-SpruceWR (3).jpg" alt="fun-facts">
+                                    <img src="assets/images/UPM(bitti)/WISA-SpruceWR (3).jpg" alt="WISA SPRUCE">
                                 </div>
                                 <h2 class="title">WISA-SPRUCE</h2>
                             </div>
@@ -274,7 +274,7 @@
                         <div class="col-lg-3 single-funfacts-about">
                             <div class="top">
                                 <div class="icon">
-                                    <img src="assets/images/UPM(bitti)/WISA-Wire Medium.jpeg" alt="fun-facts">
+                                    <img src="assets/images/UPM(bitti)/WISA-Wire Medium.jpeg" alt="WISA WIRE">
                                 </div>
                                 <h2 class="title">WISA-WIRE</h2>
                             </div>
@@ -321,7 +321,7 @@
                 <div class="col-lg-6 col-md-12">
                     <div class="left-footer-wrapper-3 pt--120 pb--80">
                         <h3 class="title" data-sal="slide-up" data-sal-delay="150" data-sal-duration="800">
-                            <img src="assets/images/logo/transparan-02.png" alt="logo-area">
+                            <img src="assets/images/logo/transparan-02.png" alt="Nevzat Ekşi">
                             </h3>
                         <div class="button-group-footer" data-sal="slide-up" data-sal-delay="350" data-sal-duration="800">
                             <a href="contact-2.html" class="rts-btn btn-seconday">BİZE ULAŞIN</a>
