--- a/yerli_kontrplak.html
+++ b/yerli_kontrplak.html
@@ -35,10 +35,10 @@
                         <div class="header-three-wrapper">
                             <div class="logo-area">
                                 <a href="index.html" class="thumbnail">
-                                    <img src="assets/images/logo/transparan-01.png" alt="logo-area">
+                                    <img src="assets/images/logo/transparan-01.png" alt="Nevzat Ekşi">
                                 </a>
                                 <a href="index.html" class="thumbnail-2">
-                                    <img src="assets/images/logo/transparan-01.png" alt="logo-area">
+                                    <img src="assets/images/logo/transparan-01.png" alt="Nevzat Ekşi">
                                 </a>
                                 </div>
                             <!-- header style two -->
@@ -176,7 +176,7 @@
                         <div class="col-lg-4 single-funfacts-about">
                             <div class="top">
                                 <div class="icon">
-                                    <img src="assets/images/yerli_kontrplak/kayın kontrplak.jpg">
+                                    <img src="assets/images/yerli_kontrplak/kayın kontrplak.jpg" alt="Kayın Kontrplak">
                                 </div>
                                 <h2 class="title">KAYIN KONTRPLAK</h2>
                             </div>
@@ -197,7 +197,7 @@
                         <div class="col-lg-4 single-funfacts-about">
                             <div class="top">
                                 <div class="icon">
-                                    <img src="assets/images/yerli_kontrplak/kavak kontrplak.jpg" alt="fun-facts">
+                                    <img src="assets/images/yerli_kontrplak/kavak kontrplak.jpg" alt="Kavak Kontrplak">
                                 </div>
                                 <h2 class="title">KAVAK KONTRPLAK</h2>
                             </div>
@@ -225,7 +225,7 @@
                 <div class="col-lg-6 col-md-12">
                     <div class="left-footer-wrapper-3 pt--120 pb--80">
                         <h3 class="title" data-sal="slide-up" data-sal-delay="150" data-sal-duration="800">
-                            <img src="assets/images/logo/transparan-02.png" alt="logo-area">
+                            <img src="assets/images/logo/transparan-02.png" alt="Nevzat Ekşi">
                             </h3>
                         <div class="button-group-footer" data-sal="slide-up" data-sal-delay="350" data-sal-duration="800">
                             <a href="contact-2.html" class="rts-btn btn-seconday">BİZE ULAŞIN</a>
